# Chrona

./: .gitignore  AGENTS.md  CLA.md  CONTRIBUTING.md  LICENSE  README.ko.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: development-log.md  phase-status.md  project-plan.md
docs/archive/: README.md
docs/implemented/: block-compression.md  block-engine.md  home-adaptive-navigation.md  integrity-verification.md  phase-1-summary.md  repository-inventory-explorer.md  snapshot-comparison.md  snapshot-engine.md  snapshot-restore.md
docs/plans/: README.md  phase-2-snapshot-engine.md  (+5 more)
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: block_commands.rs  home_commands.rs  integrity_commands.rs  inventory_commands.rs  mod.rs  repository_commands.rs  restore_commands.rs  snapshot_commands.rs
src-tauri/src/core/: access_index.rs  access_store.rs  block_codec.rs  block_ingest_service.rs  block_store.rs  chunker.rs  diff_service.rs  errors.rs  hasher.rs  home_service.rs  integrity_service.rs  inventory_service.rs  mod.rs  path_safety.rs  repository.rs  restore_service.rs  scanner.rs  snapshot_service.rs  snapshot_store.rs
src-tauri/src/models/: access.rs  block.rs  diff.rs  ingest.rs  integrity.rs  inventory.rs  mod.rs  progress.rs  repository.rs  restore.rs  snapshot.rs
src-tauri/tests/: home_access.rs  phase1_core.rs  phase2_snapshot.rs  phase3_diff.rs  phase4_restore.rs  phase5_integrity.rs  phase5_inventory.rs  phase6_compression.rs
(+34 files in other folders)
