[package]
name = "chrona"
version = "0.1.0"
edition = "2021"

[lib]
name = "chrona"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = "2"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[build-dependencies]
tauri-build = "2"

[dev-dependencies]
tempfile = "3"
